# sevenate-rs

./: Cargo.toml  LICENSE  README.md  patch.md
src/: dx7.rs  lib.rs
src/dx7/: algorithms.in  cartridge.rs  envelope.rs  lfo.rs  mod.rs  operator.rs  sysex.rs  voice.rs
