[package]
name = "sevenate"
version = "0.6.2"
authors = ["Jere Käpyaho <2261936+jerekapyaho@users.noreply.github.com>"]
edition = "2021"

[dependencies]
log = "0.4.29"    # https://crates.io/crates/log
rand = "0.9.2"    # https://crates.io/crates/rand
bit = "0.1.1"     # https://crates.io/crates/bit
dbg_hex = "0.2.0" # https://crates.io/crates/dbg_hex
num = "0.4.3"     # https://crates.io/crates/num
